# zero2prod

./: .gitignore  Cargo.toml  Dockerfile  sqlx-data.json
.github/workflows/: general.yml  scheduled-audit.yml
scripts/: init_db.sh
src/: configuration.rs  domain.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
