[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Matthew Law <matt@penguinconsulting.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "app"


[dependencies]
actix-rt = "1.1.1"
actix-web = "3.2.0"

[dev-dependencies]
reqwest = "0.10.8"
tokio = "0.2.22"
