[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Matt Law <staringskyward@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "app"


[dependencies]
actix-rt = "1.1.1"
actix-web = "3.0.0"
chrono = "0.4.19"
config = { version = "0.10.1", default-features = false, features = ["yaml"] }
serde = "1.0.115"
sqlx-cli = { version = "0.2.0", default-features = false, features = ["postgres"] }
tokio = "0.2.22"
uuid = { version = "0.8.1", features = ["v4"] }

[dependencies.sqlx]
version = "0.4.1"
default-features = false
features = [ "runtime-async-std-native-tls", "macros", "postgres", "uuid", "chrono", "migrate", "tls"]

[dev-dependencies]
reqwest = { version = "0.10.7", features = ["json"] }
