[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Matt Law <staringskyward@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "zero2prod"


[dependencies]
actix-rt = "1.1.1"
actix-web = "3.0.0"
chrono = "0.4.19"
config = { version = "0.10.1", default-features = false, features = ["yaml"] }
openssl-probe = "0.1.2"
serde = "1.0.115"
sqlx-cli = { version = "0.2.0", default-features = false, features = ["postgres"] }
tokio = "0.2.22"
uuid = { version = "0.8.1", features = ["v4"] }
log = "0.4.11"
tracing = "0.1.22"
tracing-futures = "0.2.4"
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.1.7"
tracing-log = "0.1.1"
tracing-actix-web = "0.2.1"
serde-aux = "1.1.0"
unicode-segmentation = "1.7.1"

[dependencies.sqlx]
version = "0.4.1"
default-features = false
features = [ "runtime-async-std-native-tls", "macros", "offline", "postgres", "uuid", "chrono", "migrate", "tls"]

[dev-dependencies]
claim = "0.4.0"
lazy_static = "1.4.0"
reqwest = { version = "0.10.7", features = ["json"] }
